--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@foxglove/ulog": "^2.3.1",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "three": "^0.182.0"
